[gd_scene load_steps=16 format=3 uid="uid://bm3vo4ufjrs7q"]

[ext_resource type="Script" path="res://src/entities/enemies/basic_enemy/enemy.gd" id="1_os4t1"]
[ext_resource type="AudioStream" uid="uid://bedyrnfp4a4na" path="res://src/entities/enemies/basic_enemy/assets/sfx/wasp_idle_loop.mp3" id="2_0sdi3"]
[ext_resource type="AudioStream" uid="uid://cejolwltt0k2w" path="res://src/entities/enemies/basic_enemy/assets/sfx/wasp_buzz.wav" id="2_5ts1g"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="2_kalrn"]
[ext_resource type="Texture2D" uid="uid://bfodump4jvah5" path="res://assets/sprite/enemy/green_wasp.png" id="3_57noc"]
[ext_resource type="AudioStream" uid="uid://d0nhxm6ohhowo" path="res://src/entities/enemies/basic_enemy/assets/sfx/wasp_attack.mp3" id="3_qs20q"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="3_uci3j"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_gwh43"]
[ext_resource type="AudioStream" uid="uid://c6uydg1kdt5ow" path="res://src/entities/enemies/basic_enemy/assets/sfx/wasp_aggro1.mp3" id="4_y87e6"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_hfphn"]
[ext_resource type="AudioStream" uid="uid://c2plaei2vj6is" path="res://src/entities/enemies/basic_enemy/assets/sfx/wasp_die.mp3" id="5_xhkb6"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="7_2dfcw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ddoed"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_f2j72"]
radius = 256.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2pffq"]
size = Vector2(26, 32)

[node name="BasicEnemy" type="CharacterBody2D" node_paths=PackedStringArray("idle_player")]
collision_layer = 32
script = ExtResource("1_os4t1")
SFX_idle = ExtResource("2_5ts1g")
SFX_attack = Array[AudioStream]([ExtResource("3_qs20q")])
SFX_aggro = Array[AudioStream]([ExtResource("4_y87e6")])
SFX_death = Array[AudioStream]([ExtResource("5_xhkb6")])
idle_player = NodePath("IdleAudioPlayer")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.789063, 0.0515291, 0, 1)
scale = Vector2(-0.212238, 0.212238)
texture = ExtResource("3_57noc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ddoed")

[node name="PlayerDetectRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectRange"]
shape = SubResource("CircleShape2D_f2j72")

[node name="AttackRange" type="Area2D" parent="."]
position = Vector2(8, 0)
collision_layer = 64
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
position = Vector2(3, 0)
shape = SubResource("RectangleShape2D_2pffq")
debug_color = Color(0.7, 0.0343752, 0, 0.42)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="LOSRaycast" type="RayCast2D" parent="."]
target_position = Vector2(150, 0)

[node name="StateChart" type="Node" parent="."]
script = ExtResource("2_kalrn")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("3_uci3j")

[node name="Movement" type="Node" parent="StateChart/Root"]
script = ExtResource("4_gwh43")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("5_hfphn")

[node name="toWander" type="Node" parent="StateChart/Root/Movement/Idle"]
script = ExtResource("7_2dfcw")
to = NodePath("../../Wander")
event = &"wander_started"
delay_in_seconds = "0.0"

[node name="toTrack" type="Node" parent="StateChart/Root/Movement/Idle"]
script = ExtResource("7_2dfcw")
to = NodePath("../../Track")
event = &"player_spotted"
delay_in_seconds = "0.0"

[node name="toFlee" type="Node" parent="StateChart/Root/Movement/Idle"]
script = ExtResource("7_2dfcw")
to = NodePath("../../Flee")
event = &"flee_from_player"
delay_in_seconds = "0.0"

[node name="Wander" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("5_hfphn")

[node name="toTrack" type="Node" parent="StateChart/Root/Movement/Wander"]
script = ExtResource("7_2dfcw")
to = NodePath("../../Track")
event = &"player_spotted"
delay_in_seconds = "0.0"

[node name="toFlee" type="Node" parent="StateChart/Root/Movement/Wander"]
script = ExtResource("7_2dfcw")
to = NodePath("../../Flee")
event = &"flee_from_player"
delay_in_seconds = "0.0"

[node name="toIdle" type="Node" parent="StateChart/Root/Movement/Wander"]
script = ExtResource("7_2dfcw")
to = NodePath("../../Idle")
event = &"target_reached"
delay_in_seconds = "0.0"

[node name="Track" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("5_hfphn")

[node name="toDash" type="Node" parent="StateChart/Root/Movement/Track"]
script = ExtResource("7_2dfcw")
to = NodePath("../../Dash")
event = &"dash_started"
delay_in_seconds = "0.0"

[node name="toIdle" type="Node" parent="StateChart/Root/Movement/Track"]
script = ExtResource("7_2dfcw")
to = NodePath("../../Idle")
event = &"lost_player_sight"
delay_in_seconds = "0.0"

[node name="toIdle2" type="Node" parent="StateChart/Root/Movement/Track"]
script = ExtResource("7_2dfcw")
to = NodePath("../../Idle")
event = &"stop_chase"
delay_in_seconds = "0.0"

[node name="toFlee" type="Node" parent="StateChart/Root/Movement/Track"]
script = ExtResource("7_2dfcw")
to = NodePath("../../Flee")
event = &"flee_from_player"
delay_in_seconds = "0.0"

[node name="Dash" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("5_hfphn")

[node name="toTrack" type="Node" parent="StateChart/Root/Movement/Dash"]
script = ExtResource("7_2dfcw")
to = NodePath("../../Track")
event = &"back_to_track"
delay_in_seconds = "0.0"

[node name="toFlee" type="Node" parent="StateChart/Root/Movement/Dash"]
script = ExtResource("7_2dfcw")
to = NodePath("../../Flee")
event = &"flee_from_player"
delay_in_seconds = "0.0"

[node name="Flee" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("5_hfphn")

[node name="toIdle" type="Node" parent="StateChart/Root/Movement/Flee"]
script = ExtResource("7_2dfcw")
to = NodePath("../../Idle")
event = &"player_faraway"
delay_in_seconds = "0.0"

[node name="Health" type="Node" parent="StateChart/Root"]
script = ExtResource("4_gwh43")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/Root/Health"]
script = ExtResource("5_hfphn")

[node name="toDead" type="Node" parent="StateChart/Root/Health/Idle"]
script = ExtResource("7_2dfcw")
to = NodePath("../../Dead")
event = &"death"
delay_in_seconds = "0.0"

[node name="toHurt" type="Node" parent="StateChart/Root/Health/Idle"]
script = ExtResource("7_2dfcw")
to = NodePath("../../Hurt")
event = &"take_damage"
delay_in_seconds = "0.0"

[node name="Hurt" type="Node" parent="StateChart/Root/Health"]
script = ExtResource("5_hfphn")

[node name="toDead" type="Node" parent="StateChart/Root/Health/Hurt"]
script = ExtResource("7_2dfcw")
to = NodePath("../../Dead")
event = &"death"
delay_in_seconds = "0.0"

[node name="toIdle" type="Node" parent="StateChart/Root/Health/Hurt"]
script = ExtResource("7_2dfcw")
to = NodePath("../../Idle")
delay_in_seconds = "0.0"

[node name="Dead" type="Node" parent="StateChart/Root/Health"]
script = ExtResource("5_hfphn")

[node name="Attack" type="Node" parent="StateChart/Root"]
script = ExtResource("4_gwh43")
initial_state = NodePath("Ready")

[node name="Cooldown" type="Node" parent="StateChart/Root/Attack"]
script = ExtResource("5_hfphn")

[node name="toReady" type="Node" parent="StateChart/Root/Attack/Cooldown"]
script = ExtResource("7_2dfcw")
to = NodePath("../../Ready")
event = &"attack_ready"
delay_in_seconds = "0.0"

[node name="Ready" type="Node" parent="StateChart/Root/Attack"]
script = ExtResource("5_hfphn")

[node name="toAttacking" type="Node" parent="StateChart/Root/Attack/Ready"]
script = ExtResource("7_2dfcw")
to = NodePath("../../Attacking")
event = &"attack_player"
delay_in_seconds = "0.0"

[node name="Attacking" type="Node" parent="StateChart/Root/Attack"]
script = ExtResource("5_hfphn")

[node name="toCooldown" type="Node" parent="StateChart/Root/Attack/Attacking"]
script = ExtResource("7_2dfcw")
to = NodePath("../../Cooldown")
event = &"attack_finished"
delay_in_seconds = "0.0"

[node name="IdleAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_0sdi3")

[connection signal="body_entered" from="PlayerDetectRange" to="." method="_on_detect_range_body_entered"]
[connection signal="body_exited" from="PlayerDetectRange" to="." method="_on_player_detect_range_body_exited"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_target_reached"]
[connection signal="state_entered" from="StateChart/Root/Movement/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Movement/Wander" to="." method="_on_wander_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Wander" to="." method="_on_wander_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Movement/Track" to="." method="_on_track_state_entered"]
[connection signal="state_exited" from="StateChart/Root/Movement/Track" to="." method="_on_track_state_exited"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Track" to="." method="_on_track_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Movement/Dash" to="." method="_on_dash_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Dash" to="." method="_on_dash_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Flee" to="." method="_on_flee_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Health/Dead" to="." method="_on_dead_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Attack/Cooldown" to="." method="_on_cooldown_state_entered"]
[connection signal="state_processing" from="StateChart/Root/Attack/Cooldown" to="." method="_on_cooldown_state_processing"]
[connection signal="state_entered" from="StateChart/Root/Attack/Attacking" to="." method="_on_attacking_state_entered"]
